# WebScrapingUtils

./: README.md  pyproject.toml
tests/: test_filemanager.py  test_manager_proxies.py  test_requests.py
utils/: filemanager.py  manager_proxies.py  requests.py
utils/interfaces/: manager_proxies.py  proxie.txt
